src/test/deca/syntax/valid/selection/selection_method.deca
// Description:
//    Tests a valid program with a use of the selection statement to call a method.
//
// Results:
//
//
// History:
//    created on 17/12/2024

{
        a.this_is_a_test(b, c);
}